# Lunar_Terrain_Pipeline

Lunar_Terrain_Pipeline/: README.md  hydrogen.tif  package.xml  requirements.txt  roughness.tif  setup.cfg  setup.py  slope.tif  temp_max.tif  temp_min.tif
Lunar_Terrain_Pipeline/config/: layers.preset.json  trafficability.params.yaml
Lunar_Terrain_Pipeline/launch/: trafficability.launch.py
Lunar_Terrain_Pipeline/lunar_trafficability/: geotiff_map.py  layer_fusion.py  trafficability_node.py
Lunar_Terrain_Pipeline/resource/: lunar_trafficability
Lunar_Terrain_Pipeline/scripts/: open_preflight_outputs.py  preflight_layers.py  run_preflight_and_open.py
